@@ -98,7 +98,7 @@ class ARS extends CMSPlugin implements SubscriberInterface
 		 * @var int    $userId The user ID we are asked to delete
 		 * @var string $type   The export type (user, admin, lifecycle)
 		 */
-		[$userId, $type] = $event->getArguments();
+		[$userId, $type] = array_values($event->getArguments());
 
 		$ret = [
 			'ars' => [
@@ -198,7 +198,7 @@ class ARS extends CMSPlugin implements SubscriberInterface
 	public function onDataComplianceExportUser(Event $event): void
 	{
 		/** @var int $userId */
-		[$userId] = $event->getArguments();
+		[$userId] = array_values($event->getArguments());
 
 		$export = new SimpleXMLElement("<root></root>");
 		$db     = $this->getDatabase();
@@ -255,7 +255,7 @@ class ARS extends CMSPlugin implements SubscriberInterface
 		 * @var   int    $userId The user ID we are asked to delete
 		 * @var   string $type   The export type (user, admin, lifecycle)
 		 */
-		[$userId, $type] = $event->getArguments();
+		[$userId, $type] = array_values($event->getArguments());
 
 		$this->setEventResult($event, [
 			Text::_('PLG_DATACOMPLIANCE_ARS_ACTIONS_1'),
