@@ -3,6 +3,7 @@ Akeeba Data Compliance 3.2.0
 + Notice about Joomla 4 End of Service
 ~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
 ~ Joomla 5 preparation: Remove obsolete class names
+~ Joomla 5 preparation: Work around backwards incompatible changes in core plugin events
 ~ Block uninstallation of child extensions
 ~ Changed the plugins' namespace
 ~ Force Joomla to create its namespace map afresh at the end of installation, in case it failed to do that automatically
